feat(AIILG-861): capture evaluation ID on user registration
