# frontend/openapi.json
@@ -3455,6 +3455,11 @@
         "properties": {
           "name": { "type": "string", "title": "Name" },
           "email": { "type": "string", "format": "email", "title": "Email" },
+          "evaluation_id": {
+            "type": "string",
+            "minLength": 1,
+            "title": "Evaluation Id"
+          },
           "organisation_id": {
             "type": "string",
             "format": "uuid",
@@ -3462,7 +3467,7 @@
           }
         },
         "type": "object",
-        "required": ["name", "email", "organisation_id"],
+        "required": ["name", "email", "evaluation_id", "organisation_id"],
         "title": "UserCreate"
       },
       "UserExistsResponse": {
